--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <div class="comment-section">
     <button class="submit-btn" id="toggleMode">다크모드</button>
     <div class="announcement" id="announcement">
-        관리자 공지: 개인 운영사이트임을 알려드리며 현제 모종의 오류로 댓글, 공지기능이 정상적으로 작동하고 있지 않고있습니다. 사용자 여러분들의 양해 바랍니다. (2024-12-28 09:30:00).
+        관리자 공지: 개인 운영사이트임을 알려드리며 이유없이 삭제되거나 변경될수 있음을 알려드립니다. (2024-12-28 09:30:00).
     </div>
     <div class="admin-announcement" id="adminAnnouncement">
         <textarea id="announcementInput" placeholder="공지 내용을 작성하세요"></textarea>
