--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 <div class="comment-section">
     <button class="submit-btn" id="toggleMode">다크모드</button>
     <div class="announcement" id="announcement">
-        관리자 공지: 개인 운영사이트임을 알려드리며 이유없이 삭제되거나 변경될수 있음을 알려드립니다. (2024-12-28 09:30:00).
+        관리자 공지: 개인 운영사이트임을 알려드리며 이유없이 삭제되거나 변경될수 있음을 알려드립니다. (2024-12-28 09:30:00).<br>
+                    (가타 문의: mindshop135790@gmail.com)
     </div>
 </div>
 
