--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <h3><span>[</span> 윤석열을 더이상 찾을 수 없습니다 <span>]</span></h3>
         <span class="text">
             입력하신 인물을 찾을 수 없거나 서비스 연결 오류일 수 있습니다.<br>
-            검색어를를 확인하신 후 다시 이용해 주시기 바랍니다.
+            검색어를 확인하신 후 다시 이용해 주시기 바랍니다.
         </span>
         <span class="text">감사합니다.</span>
 
@@ -136,7 +136,7 @@
     <button class="submit-btn" id="toggleMode">다크모드</button>
     <div class="announcement" id="announcement">
         관리자 공지: 개인 운영사이트임을 알려드리며 이유없이 삭제되거나 변경될수 있음을 알려드립니다. (2024-12-28 09:30:00).<br>
-                    (가타 문의: mindshop135790@gmail.com)
+                    오류, 건의사항, 더 좋은 아이디어가 있으신 분들은 제보 부탁드립니다! (E-maill: mindshop135790@gmail.com)
     </div>
 </div>
 
