--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             text-align: center;
         }
         .contents .top_logo img {
-            width: 50%;
+            width: 30%;
             height: auto;
         }
         .contents h3 {
@@ -120,7 +120,7 @@
 
 <div class="container">
     <div class="contents">
-        <p class="top_logo"><img src="https://p16-faceuimg-sign-sg.ibyteimg.com/tos-alisg-v-fb2c04-sg/osINfFBtjVBBUicazySlqAcfgEJvCHsIAA46iL~tplv-fsypkocq0w-image.image?lk3s=14b2b2f2&x-expires=1735353180&x-signature=NvTKxXPnaXvQ9kfFnt1LRfZFOgw%3D" alt="내란의힘 이미지지"></p>
+        <p class="top_logo"><img src="https://www.president.go.kr/assets/images/common/logo-navy.svg" alt="내란의힘 이미지지"></p>
         <h3><span>[</span> 윤석열을 더이상 찾을 수 없습니다 <span>]</span></h3>
         <span class="text">
             입력하신 인물을 찾을 수 없거나 서비스 연결 오류일 수 있습니다.<br>
