--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 <div class="comment-section">
     <button class="submit-btn" id="toggleMode">다크모드</button>
     <div class="announcement" id="announcement">
-        관리자 공지: 개인 운영사이트임을 알려드리며 이유없이 삭제되거나 변경될수 있음을 알려드립니다. (2024-12-28 09:30:00).<br>
-                    오류, 건의사항, 더 좋은 아이디어가 있으신 분들은 제보 부탁드립니다! (E-maill: mindshop135790@gmail.com)
+        관리자 공지: 개인 운영사이트임을 알려드리며 이유없이 삭제되거나 변경될수 있음을 알려드립니다. <br>
+        초보 개발자 임으로 오류, 건의사항, 더 좋은 아이디어가 있으신 분들은 제보 부탁드립니다! (E-maill: mindshop135790@gmail.com)
     </div>
 </div>
 
