--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
         .contents .text {
             font-size: 21px;
-            color: #585858;
+            color: #ff0000;
             letter-spacing: -0.4px;
             line-height: 1.4;
         }
@@ -120,7 +120,7 @@
 
 <div class="container">
     <div class="contents">
-        <p class="top_logo"><img src="https://www.president.go.kr/assets/images/common/logo-navy.svg" alt="내란의힘 이미지지"></p>
+        <p class="top_logo"><img src="https://www.president.go.kr/assets/images/common/logo-navy.svg" alt="대통령실 로고"></p>
         <h3><span>[</span> 윤석열을 더이상 찾을 수 없습니다 <span>]</span></h3>
         <span class="text">
             입력하신 인물을 찾을 수 없거나 서비스 연결 오류일 수 있습니다.<br>
